[fix] clearer was way too big

--- a/packages/ng/src/app/select/clearer/select-clearer.component.scss
+++ b/packages/ng/src/app/select/clearer/select-clearer.component.scss
@@ -3,13 +3,16 @@
 
 .select-clear {
 	position: absolute;
-	font-size: .75rem;
 	bottom: .45rem;
 	right: 2.75 * _component("textfield.input.padding-horizontal");
 	padding: 0;
 	width: 1rem;
 	height: 1rem;
 	display: none;
+	&.actionIcon .lucca-icon {
+		display: block;
+		font-size: .75rem;
+	}
 }
 
 
